--- a/components/backend-tests-go-xsygakuc/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-xsygakuc/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-xsygakuc
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-xsygakuc:0876fe0d344083ab5d7befe7190cbb297f7f411e@sha256:0ecb9a24ea7fb329226c7494f64dd863627433bdda44f8afec0c6e47d4577833
+          name: container-image
